[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main_screens/reusable_controls/ButtonNinePatch.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_screens/images/rect_9patch_button_normal.png" type="Texture" id=2]
[ext_resource path="res://scenes/main_screens/images/rect_9patch_button_pressed.png" type="Texture" id=3]



[node name="ButtonNinePatch" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -312.0
margin_bottom = -204.0
rect_min_size = Vector2( 48, 36 )
size_flags_horizontal = 6
size_flags_vertical = 0
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
texture_rect_normal = ExtResource( 2 )
texture_rect_pressed = ExtResource( 3 )
texture_rect_focused = ExtResource( 2 )

[node name="RectNinePatch" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 1
patch_margin_top = 3
patch_margin_right = 1
patch_margin_bottom = 3

[connection signal="button_down" from="." to="." method="_on_ButtonNinePatch_button_down"]
[connection signal="button_up" from="." to="." method="_on_ButtonNinePatch_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_ButtonNinePatch_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ButtonNinePatch_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_ButtonNinePatch_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ButtonNinePatch_mouse_exited"]
